Refactoring of markup. <Ben>

--- a/example.html
+++ b/example.html
@@ -16,7 +16,7 @@
 				<h3></h3>
 				<div class="waiting">
 					<img class="spinner" src="" alt=""/>
-					<p class="message lead"></p>
+					<p class="message"></p>
 					<menu class="buttons">
 						<input type="button" class="btn btn-cancel" value="Cancel">	                        
 					</menu>
