Conversion to node.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<div id="gray-curtain"></div>
 	<div id="example" class="dialog-wrapper" 
 			 data-state=""
-			 data-strings='{"title":"Example Dialog", "message-waiting":"Waiting...", "message-success":"Would you like to &lt;span class=\"foo\"&gt;foo&lt;/span class=\"bar\"&gt;, &lt;span&gt;bar&lt;/span&gt; or &lt;span class=\"baz\"&gt;baz?&lt;/span&gt;&lt;p class=\"important-text\"&gt;Beware of the bam!&lt;/p&gt;", "message-error":"Oops an error has occurred."}'
-			 '>
+			 data-strings='{"title":"Example Dialog", "message-waiting":"Waiting...", "message-success":"Would you like to &lt;span class=\"foo\"&gt;foo&lt;/span class=\"bar\"&gt;, &lt;span&gt;bar&lt;/span&gt; or &lt;span class=\"baz\"&gt;baz?&lt;/span&gt;&lt;p class=\"important-text\"&gt;Beware of the bam!&lt;/p&gt;", "message-error":"Oops an error has occurred."}'>
 		 <div class="three-d-context">
 			<form method="POST" action="" class="flipped">
 				<section class="dialog front">
