Addition of dragging behavior.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						<h3></h3>
 					</header>				
 					<div class="spinner"></div>
+					<div class="spinner2"></div>
 					<article class="waiting">											
 						<p class="message"></p>
 						<menu>
@@ -55,6 +56,7 @@
 		</div>
 	</noscript>
 	<script src="http://code.jquery.com/jquery-1.7.2.js"></script>
+	<script src="./drags.js"></script>
 	<script src="./tiny-pub-sub.js"></script>
 	<script src="./model.js"></script>
 	<script src="./view.js"></script>
