Addition of dragging behavior.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		 <div class="three-d-context">
 			<form method="POST" action="" class="flipped">
 				<section class="dialog front">
-					<header class="sheen">
+					<header class="sheen grabbable">
 						<h3></h3>
 					</header>				
 					<div class="spinner"></div>
