Modification of spinner.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 					<header class="sheen grabbable">
 						<h3></h3>
 					</header>				
-					<div class="spinner"></div>
-					<div class="spinner2"></div>
+					<div class="spinner three-d-element"></div>
 					<article class="waiting">											
 						<p class="message"></p>
 						<menu>
